refactoring structure folders

--- a/thank_page.html
+++ b/thank_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" type="image/x-icon" href="image/favicon.svg" alt="favicon">
+    <link rel="icon" type="image/x-icon" href="image/icons/camera.svg">
     <title>Thank you - Freedom Studios Academy</title>
     <meta name="description" content="Freedom Studio Academy is a premier educational institution dedicated to fostering creativity, innovation, and personal growth. Our diverse curriculum empowers students to explore their passions, develop critical thinking skills, and prepare for successful futures. Join us to unlock your potential and embark on a journey of knowledge and self-discovery.">
 </head>
