--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Privacy - Freedom Studios Academy</title>
     <meta name="description" content="Explore our Policy page to understand our commitment to privacy, data security, and user rights. Learn about the measures we take to protect your information and ensure a transparent and trustworthy online environment.">
-    <link rel="shortcut icon" href="image/favicon.svg" type="image/x-icon"/>
+    <link rel="shortcut icon" href="image/icons/camera.svg" type="image/x-icon"/>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -13,7 +13,7 @@
     <header class="header__container">
         <div class="header__body">
             <a href="index.html" class="logo">
-                <img src="image/logo.svg" class="logo" alt="logo"/>
+                <img src="image/icons/logo.svg" class="logo" alt="logo"/>
             </a>
         </div>
     </header>
@@ -359,14 +359,14 @@
     <div class="footer__container">
         <div class="footer__body">
             <a href="index.html" class="logo">
-                <img src="image/logo.svg" class="logo" alt="logo"/>
+                <img src="image/icons/logo.svg" class="logo" alt="logo"/>
             </a>
             <ul class="footer__social">
-                <li class="footer__icon"><a href="#" target="_blank"><img src="image/twitter.svg" alt="twitter"></a>
+                <li class="footer__icon"><a href="#" target="_blank"><img src="image/icons/social/twitter.svg" alt="twitter"></a>
                 </li>
-                <li class="footer__icon"><a href="#" target="_blank"><img src="image/facebook.svg" alt="facebook"></a>
+                <li class="footer__icon"><a href="#" target="_blank"><img src="image/icons/social/facebook.svg" alt="facebook"></a>
                 </li>
-                <li class="footer__icon"><a href="#" target="_blank"><img src="image/instagram.svg" alt="instagram"></a>
+                <li class="footer__icon"><a href="#" target="_blank"><img src="image/icons/social/instagram.svg" alt="instagram"></a>
                 </li>
             </ul>
         </div>
