--- a/terms.html
+++ b/terms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" type="image/x-icon" href="image/favicon.svg" alt="favicon">
+    <link rel="icon" type="image/x-icon" href="image/icons/camera.svg">
     <title>Terms - Freedom Studios Academy</title>
     <meta name="description" content="Our Terms page outlines the conditions and terms of service that govern the use of our platform. Discover the guidelines, responsibilities, and agreements that shape our relationship with users.">
 
@@ -14,7 +14,7 @@
     <header class="header__container">
         <div class="header__body">
             <a href="index.html" class="logo">
-                <img src="image/logo.svg" class="logo" alt="logo"/>
+                <img src="image/icons/logo.svg" class="logo" alt="logo"/>
             </a>
         </div>
     </header>
@@ -312,14 +312,14 @@
     <div class="footer__container">
         <div class="footer__body">
             <a href="index.html" class="logo">
-                <img src="image/logo.svg" class="logo" alt="logo"/>
+                <img src="image/icons/logo.svg" class="logo" alt="logo"/>
             </a>
             <ul class="footer__social">
-                <li class="footer__icon"><a href="#" target="_blank"><img src="image/twitter.svg" alt="twitter"></a>
+                <li class="footer__icon"><a href="#" target="_blank"><img src="image/icons/social/twitter.svg" alt="twitter"></a>
                 </li>
-                <li class="footer__icon"><a href="#" target="_blank"><img src="image/facebook.svg"
+                <li class="footer__icon"><a href="#" target="_blank"><img src="image/icons/social/facebook.svg"
                                                                           alt="facebook"></a></li>
-                <li class="footer__icon"><a href="#" target="_blank"><img src="image/instagram.svg" alt="instagram"></a>
+                <li class="footer__icon"><a href="#" target="_blank"><img src="image/icons/social/instagram.svg" alt="instagram"></a>
                 </li>
             </ul>
         </div>
