refactoring structure folders

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="icon" type="image/x-icon" href="image/icons/camera.svg">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="icon" type="image/x-icon" href="images/icons/camera.svg">
 		<title>Freedom Studios Academy</title>
 		<meta name="description" content="Crafting captivating visual narratives - Your premier destination for bespoke video content creation.">
 	</head>
@@ -15,7 +15,7 @@
 			<header class="header__container">
 				<div class="header__body">
 					<a href="index.html" class="logo">
-						<img src="image/icons/logo.svg" class="logo" alt="logo" />
+						<img src="images/icons/logo.svg" class="logo" alt="logo" />
 					</a>
 					<nav class="header__menu menu__body">
 						<ul class="menu__list">
@@ -41,23 +41,23 @@
 					</div>
 				</div>
 				<div class="home__image">
-					<img src="image/main.webp" alt="main-image">
+					<img src="images/main.webp" alt="main-image">
 				</div>
 			</section>
 			<section class="advantages">
 				<div class="advantages__container">
 					<ul class="advantages__list">
 						<li class="advantages__item">members benefits</li>
-						<li class="advantages__item"><img class="advantages__icon" src="image/icons/advantages/calendar.svg" alt="icon"><div>2 weeks<span>internship</span></div></li>
-						<li class="advantages__item"><img class="advantages__icon" src="image/icons/advantages/groups.svg" alt="icon"><div>24/7<span>mentorship</span></div></li>
-						<li class="advantages__item"><img class="advantages__icon" src="image/icons/advantages/laptop.svg" alt="icon"><div>2 free<span>e-books</span></div></li>
+						<li class="advantages__item"><img class="advantages__icon" src="images/icons/advantages/calendar.svg" alt="icon"><div>2 weeks<span>internship</span></div></li>
+						<li class="advantages__item"><img class="advantages__icon" src="images/icons/advantages/groups.svg" alt="icon"><div>24/7<span>mentorship</span></div></li>
+						<li class="advantages__item"><img class="advantages__icon" src="images/icons/advantages/laptop.svg" alt="icon"><div>2 free<span>e-books</span></div></li>
 					</ul>
 				</div>
 			</section>
 			<section class="about" id="about">
 				<div class="about__container">
 					<div class="about__body">
-						<div class="about__image"><img src="image/about.webp" alt="studio"></div>
+						<div class="about__image"><img src="images/about.webp" alt="studio"></div>
 						<div class="about__content">
 							<div class="about__subtitle subtitle">Why us?</div>
 							<h2 class="about__title second-title">world class training</h2>
@@ -95,7 +95,7 @@
 							<p class="team__text text">At Freedom Studios Academy, we have a team of top-notch professionals who both work in and instruct at our institution. Our instructors are seasoned experts in the field of video production, known for their creativity and quality of work. Each educator not only excels in their craft but is also dedicated to sharing their knowledge and unique experiences with our students. They inspire, motivate, and support individuals on their journey toward achieving excellence in the art of video content creation.</p>
 						</div>
 						<div class="team__image">
-							<img src="image/team.webp" alt="team">
+							<img src="images/team.webp" alt="team">
 						</div>
 					</div>
 				</div>
@@ -132,7 +132,7 @@
 							<a href="mailto:freedomstudiosacademy@gmail.com" class="email">freedomstudiosacademy@gmail.com</a>
 						</div>
 					</div>
-					<div class="banner__image"><img src="image/banner.webp" alt="banner"></div>
+					<div class="banner__image"><img src="images/banner.webp" alt="banner"></div>
 				</div>
 			</section>
 		</main>
@@ -140,20 +140,20 @@
 			<div class="footer__container">
 				<div class="footer__body">
 					<a href="index.html" class="logo">
-						<img src="image/icons/logo.svg" class="logo" alt="logo" />
+						<img src="images/icons/logo.svg" class="logo" alt="logo" />
 					</a>
 					<a href="privacyPolicy.html" class="footer__link">Privacy Policy</a>
 					<a href="terms.html" class="footer__link">Terms & Conditions</a>
 					<ul class="footer__social">
-						<li class="footer__icon"><a href="#" target="_blank"><img src="image/icons/social/twitter.svg" alt="twitter"></a></li>
-						<li class="footer__icon"><a href="#" target="_blank"><img src="image/icons/social/facebook.svg" alt="facebook"></a></li>
-						<li class="footer__icon"><a href="#" target="_blank"><img src="image/icons/social/instagram.svg" alt="instagram"></a></li>
+						<li class="footer__icon"><a href="#" target="_blank"><img src="images/icons/social/twitter.svg" alt="twitter"></a></li>
+						<li class="footer__icon"><a href="#" target="_blank"><img src="images/icons/social/facebook.svg" alt="facebook"></a></li>
+						<li class="footer__icon"><a href="#" target="_blank"><img src="images/icons/social/instagram.svg" alt="instagram"></a></li>
 					</ul>
 				</div>
 			</div>
 		</footer>
 		<div class="overlay _overlay"></div>
-		<script src="script.js"></script>
-		<script type="text/javascript" src="main.min.js" defer="" async=""></script>
+		<script src="js/script.js"></script>
+		<script type="text/javascript" src="js/main.min.js" defer="" async=""></script>
 	</body>
 	</html>
