add styles & animation

--- a/index.html
+++ b/index.html
@@ -111,8 +111,11 @@
 								<input class="form__input" type="email" required name="email" placeholder="Email">
 							</div>
 							<div class="checkbox">
-								<input name="privacy" value="on" type="checkbox" required>
-								<label class="bottom-checkbox">I accept<a href="privacyPolicy.html">Privacy policy</a></label>
+								<div class="round">
+									<input type="checkbox" checked id="checkbox" />
+									<label for="checkbox"></label>
+								</div>
+								<label class="bottom-checkbox">I accept<a href="privacyPolicy.html"> Privacy policy</a></label>
 							</div>
 							<button class="btn form__button button" type="submit">Submit</button>
 						</form>
@@ -126,7 +129,7 @@
 						<h2 class="banner__title title">freedom studios academy</h2>
 						<p class="banner__text text">Submit your application for training and our managers will contact you as soon as possible</p>
 						<a href="#contact" class="banner__button button">Contact us</a>
-						<div class="banner__social text">
+						<div class="banner__social">
 							<a href="https://maps.app.goo.gl/MiNMjXwsdFYQAdBk7" class="address" target="_blank">Address: Rakhi, Sec.26, Naya Raipur, raipur,<br> Chhattisgarh 492015, India</a>
 							<a href="tel:+919473118245;ext=1234" class="phone">Tel: +919473118245</a>
 							<a href="mailto:freedomstudiosacademy@gmail.com" class="email">freedomstudiosacademy@gmail.com</a>
