--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 						<li class="footer__icon"><a href="#" target="_blank"><img src="images/icons/social/instagram.svg" alt="instagram"></a></li>
 					</ul>
 				</div>
+				<div class="footer__label">Developed by Zhenya Luzhanski 2024</div>
 			</div>
 		</footer>
 		<div class="overlay _overlay"></div>
